Changelog
=========

0.6 (unreleased)
----------------

- Token role enabled just for non-folderish items.
  [davidemoro]

- Removed the "Can add" option from token role
  [davidemoro]

- Modified token delete form
  [davidemoro]


0.5 (2012-04-27)
----------------

- The share with link action is available by default without having to enable 
  token role on the current item or section.
  [davidemoro]

- Get rid of the enable and disable token role action, it is enabled by default now.
  Important: if you upgrade redomino.tokenrole to this version you should delete from
  the category object_buttons of portal_actions the enable_tokenrole and disable_tokenrole.
  [davidemoro]

- Granted the token role permission to users with Editor role
  [davidemoro]

- Enabled the locales/en directory
  [davidemoro]

- Added new tests
  [davidemoro]

- English translation
  [dpollino]


0.4 (2012-04-04)
----------------

- Modified long_description in setup.py.
  [davidemoro]

- Added .gitignore file.
  [davidemoro]


0.3 (2012-04-02)
----------------

- First public release
  [sithmel]


0.2 (2012-04-02)
----------------

- Porting to Plone 4
  [davidemoro]

- Converted all formlib forms to z3c.form
  [davidemoro]

- Added i18n support
  [davidemoro]

- Added a distribution form that let you share token roles through a "send to" form
  [davidemoro]

- Added a multirole token (previously it was only possibile to grant a Reader role). 
  Now you can choose which roles associate to your tokens
  [davidemoro]

- Created converted all formlib forms to z3c.form
  [davidemoro]

- Improved installation, now the PAS plugin is configured automatically in acl_users
  [davidemoro]

- Added support to plone.app.testing and wrote some tests (not 100% tested)
  [davidemoro]


0.1 (2012-03-21)
----------------

- First implementation and main author Maurizio Del Monte
  [miziodel]
