@@ -4,6 +4,10 @@
  xmlns:five="http://namespaces.zope.org/five"
  >
 
+  <!-- Actions -->
+  <adapter factory=".actions.CancelActions" />
+  <adapter factory=".actions.AddActionHandler" />
+
   <!-- Forms -->
   <browser:page
     name="token_add"
